// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListenCard renders correctly for mode = 'listens' 1`] = `
<ListenCard
  currentFeedback={1}
  isCurrentListen={false}
  isCurrentUser={true}
  listen={
    Object {
      "listened_at": 0,
      "playing_now": false,
      "track_metadata": Object {
        "additional_info": Object {
          "artist_msid": "artist_msid",
          "recording_msid": "bar",
          "release_mbid": "foo",
        },
        "artist_name": "Moondog",
        "track_name": "Bird's Lament",
      },
    }
  }
  mode="listens"
  newAlert={[Function]}
  playListen={[Function]}
  removeListenFromListenList={[Function]}
  updateFeedback={[Function]}
  updateRecordingToPin={[Function]}
>
  <ForwardRef
    className="listen-card row  
		 "
    onDoubleClick={[Function]}
  >
    <div
      className="listen-card row  
		 "
      onDoubleClick={[Function]}
      style={
        Object {
          "background": "#FFFFFF",
          "border": "1px solid #EEEEEE",
          "borderRadius": "8px",
          "boxShadow": "0 1px 1px rgba(192,192,192,0.1), 0 2px 2px rgba(192,192,192,0.15), 0 4px 4px rgba(192,192,192,0.20)",
          "boxSizing": "border-box",
          "height": "100%",
        }
      }
    >
      <div
        className="listen-details  col-xs-12"
      >
        <MediaQuery
          minWidth={768}
        />
        <MediaQuery
          maxWidth={767}
        />
      </div>
      <div
        className="col-xs-4 col-sm-3 listen-controls-container"
      >
        <div
          className="listen-controls"
        >
          <button
            className="btn-transparent play-button"
            onClick={[Function]}
            title="Play"
            type="button"
          >
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f144",
                    "M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1 16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z",
                  ],
                  "iconName": "play-circle",
                  "prefix": "far",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size="2x"
              spin={false}
              swapOpacity={false}
              symbol={false}
              title=""
              transform={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-play-circle fa-w-16 fa-2x "
                data-icon="play-circle"
                data-prefix="far"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1 16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
          </button>
        </div>
      </div>
    </div>
  </ForwardRef>
</ListenCard>
`;

exports[`ListenCard renders correctly for mode = 'recent ' 1`] = `
<ListenCard
  currentFeedback={1}
  isCurrentListen={false}
  isCurrentUser={true}
  listen={
    Object {
      "listened_at": 0,
      "playing_now": false,
      "track_metadata": Object {
        "additional_info": Object {
          "artist_msid": "artist_msid",
          "recording_msid": "bar",
          "release_mbid": "foo",
        },
        "artist_name": "Moondog",
        "track_name": "Bird's Lament",
      },
    }
  }
  mode="recent"
  newAlert={[Function]}
  playListen={[Function]}
  removeListenFromListenList={[Function]}
  updateFeedback={[Function]}
  updateRecordingToPin={[Function]}
>
  <ForwardRef
    className="listen-card row  
		 "
    onDoubleClick={[Function]}
  >
    <div
      className="listen-card row  
		 "
      onDoubleClick={[Function]}
      style={
        Object {
          "background": "#FFFFFF",
          "border": "1px solid #EEEEEE",
          "borderRadius": "8px",
          "boxShadow": "0 1px 1px rgba(192,192,192,0.1), 0 2px 2px rgba(192,192,192,0.15), 0 4px 4px rgba(192,192,192,0.20)",
          "boxSizing": "border-box",
          "height": "100%",
        }
      }
    >
      <div
        className="listen-details  col-xs-8 col-sm-9"
      >
        <MediaQuery
          minWidth={768}
        />
        <MediaQuery
          maxWidth={767}
        />
      </div>
      <div
        className="col-xs-4 col-sm-3 listen-controls-container"
      >
        <a
          href="/user/undefined"
          rel="noopener noreferrer"
          target="_blank"
        />
        <div
          className="listen-controls"
        >
          <button
            className="btn-transparent play-button"
            onClick={[Function]}
            title="Play"
            type="button"
          >
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f144",
                    "M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1 16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z",
                  ],
                  "iconName": "play-circle",
                  "prefix": "far",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size="2x"
              spin={false}
              swapOpacity={false}
              symbol={false}
              title=""
              transform={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-play-circle fa-w-16 fa-2x "
                data-icon="play-circle"
                data-prefix="far"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1 16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
          </button>
        </div>
      </div>
    </div>
  </ForwardRef>
</ListenCard>
`;

exports[`ListenCard renders correctly for playing_now listen 1`] = `
<ListenCard
  currentFeedback={1}
  isCurrentListen={false}
  isCurrentUser={true}
  listen={
    Object {
      "listened_at": 0,
      "playing_now": false,
      "track_metadata": Object {
        "additional_info": Object {
          "artist_msid": "artist_msid",
          "recording_msid": "bar",
          "release_mbid": "foo",
        },
        "artist_name": "Moondog",
        "track_name": "Bird's Lament",
      },
    }
  }
  mode="listens"
  newAlert={[Function]}
  playListen={[Function]}
  removeListenFromListenList={[Function]}
  updateFeedback={[Function]}
  updateRecordingToPin={[Function]}
>
  <ForwardRef
    className="listen-card row  
		 "
    onDoubleClick={[Function]}
  >
    <div
      className="listen-card row  
		 "
      onDoubleClick={[Function]}
      style={
        Object {
          "background": "#FFFFFF",
          "border": "1px solid #EEEEEE",
          "borderRadius": "8px",
          "boxShadow": "0 1px 1px rgba(192,192,192,0.1), 0 2px 2px rgba(192,192,192,0.15), 0 4px 4px rgba(192,192,192,0.20)",
          "boxSizing": "border-box",
          "height": "100%",
        }
      }
    >
      <div
        className="listen-details  col-xs-12"
      >
        <MediaQuery
          minWidth={768}
        />
        <MediaQuery
          maxWidth={767}
        />
      </div>
      <div
        className="col-xs-4 col-sm-3 listen-controls-container"
      >
        <div
          className="listen-controls"
        >
          <button
            className="btn-transparent play-button"
            onClick={[Function]}
            title="Play"
            type="button"
          >
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f144",
                    "M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1 16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z",
                  ],
                  "iconName": "play-circle",
                  "prefix": "far",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size="2x"
              spin={false}
              swapOpacity={false}
              symbol={false}
              title=""
              transform={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-play-circle fa-w-16 fa-2x "
                data-icon="play-circle"
                data-prefix="far"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1 16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
          </button>
        </div>
      </div>
    </div>
  </ForwardRef>
</ListenCard>
`;

exports[`ListenCard should render timestamp using preciseTimestamp 1`] = `
<ListenCard
  currentFeedback={1}
  isCurrentListen={false}
  isCurrentUser={true}
  listen={
    Object {
      "listened_at": 0,
      "playing_now": false,
      "track_metadata": Object {
        "additional_info": Object {
          "artist_msid": "artist_msid",
          "recording_msid": "bar",
          "release_mbid": "foo",
        },
        "artist_name": "Moondog",
        "track_name": "Bird's Lament",
      },
    }
  }
  mode="listens"
  newAlert={[Function]}
  playListen={[Function]}
  removeListenFromListenList={[Function]}
  updateFeedback={[Function]}
  updateRecordingToPin={[Function]}
>
  <ForwardRef
    className="listen-card row  
		 "
    onDoubleClick={[Function]}
  >
    <div
      className="listen-card row  
		 "
      onDoubleClick={[Function]}
      style={
        Object {
          "background": "#FFFFFF",
          "border": "1px solid #EEEEEE",
          "borderRadius": "8px",
          "boxShadow": "0 1px 1px rgba(192,192,192,0.1), 0 2px 2px rgba(192,192,192,0.15), 0 4px 4px rgba(192,192,192,0.20)",
          "boxSizing": "border-box",
          "height": "100%",
        }
      }
    >
      <div
        className="listen-details  col-xs-12"
      >
        <MediaQuery
          minWidth={768}
        />
        <MediaQuery
          maxWidth={767}
        />
      </div>
      <div
        className="col-xs-4 col-sm-3 listen-controls-container"
      >
        <div
          className="listen-controls"
        >
          <button
            className="btn-transparent play-button"
            onClick={[Function]}
            title="Play"
            type="button"
          >
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f144",
                    "M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1 16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z",
                  ],
                  "iconName": "play-circle",
                  "prefix": "far",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size="2x"
              spin={false}
              swapOpacity={false}
              symbol={false}
              title=""
              transform={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-play-circle fa-w-16 fa-2x "
                data-icon="play-circle"
                data-prefix="far"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1 16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
          </button>
        </div>
      </div>
    </div>
  </ForwardRef>
</ListenCard>
`;
